manifest/objects/SBQQ__PricingGuidance__c.object
<CustomObject>
    <description>Volume pricing guidance that recommends discounts based on quantity.</description>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this pricing guidance.</description>
        <inlineHelpText>Description for this pricing guidance.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Explanation__c</fullName>
        <description>Provide sales reps with an explanation of this pricing guidance and recommendations for discounts to provide. They can view this explanation with the pricing guidance in the quote line editor.</description>
        <inlineHelpText>Provide sales reps with an explanation of this pricing guidance and recommendations for discounts to provide. They can view this explanation with the pricing guidance in the quote line editor.</inlineHelpText>
        <label>Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludePriorPurchases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When setting the pricing guidance tier for a quote line, include product quantities that were sold earlier</description>
        <inlineHelpText>When setting the pricing guidance tier for a quote line, include product quantities that were sold earlier</inlineHelpText>
        <label>Include Prior Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this pricing guidance for use on associated product. Inactive pricing guidance won&apos;t appear in the quote line editor.</description>
        <inlineHelpText>Enable this pricing guidance for use on associated product.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Summary__c</fullName>
        <description>The parameters provided to create this pricing guidance.</description>
        <inlineHelpText>The parameters provided to create this pricing guidance.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Range: The guidance discounts using only the pricing guidance tier that applies to the quote line quantity.</description>
        <inlineHelpText>Range: The guidance discounts using only the pricing guidance tier that applies to the quote line quantity.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                    <default>true</default>
                    <label>Range</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Unit__c</fullName>
        <description>Choose the type of discount that this pricing guidance applies to the quote line.</description>
        <inlineHelpText>Choose the type of discount that this pricing guidance applies to the quote line.</inlineHelpText>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pricing Guidance</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Guidance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>